# UNHEARD

./: .gitignore  CONTRIBUTING.md  README.md  Unheard - Concept and Technical Document.docx  Unheard - Development Requirements and Roadmap.md  Unheard - Engineering Build Plan (Phase 1 MVP).docx  Unheard - One-Page Brief.docx  Unheard - Terms and Community Guidelines.docx  package-lock.json  package.json  tsconfig.base.json
.github/workflows/: ci.yml
apps/client/: README.md  package.json
apps/gateway/: README.md  package.json
apps/gateway/src/: routes.ts  server.ts
apps/gateway/src/lib/: logScrub.ts  serialize.ts
apps/gateway/test/: routes.privacy.test.ts  serialize.test.ts
backlog/: E0-foundations.md  E1-masking-service.md  E10-sustainability.md  E11-deepen.md  E2-accounts-auth.md  E3-post-feed.md  E4-engagement-originals.md  E5-hardening.md  E6-comments.md  E7-moderation.md  E8-crisis-bridge.md  E9-hotline.md  README.md
db/: README.md
db/migrations/: 0001_init.sql
infra/: .env.example  README.md  docker-compose.yml
scripts/: create_github_issues.py  privacy_scan.sh
services/masking/: README.md  pyproject.toml
services/masking/masking/: __init__.py  app.py  convert.py  guards.py
services/masking/tests/: test_no_disk_writes.py
services/moderation/: README.md  pyproject.toml
services/moderation/moderation/: __init__.py  classify.py
services/moderation/tests/: test_pain_never_blocked.py
